Agrega MicrofoneCaptura antes de decoraciones